Se mejora la visualizacion de los tweets

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -168,11 +168,6 @@ div.loading {
     width: 100%;
 }
 
-div.quote-body p.text {
-    font-size: 1.1em;
-    text-align: center;
-}
-
 div#news_section div.owl-item{
     height: 250px;
     overflow: auto;
@@ -190,12 +185,31 @@ div#news_section div.owl-item a.btn-tweet {
     font-size: 0.6em;
     padding: 5px 10px;
     position: absolute;
-    top: 5px;
+    top: 30px;
     right: 5px;
+    background-color: #c1c1c1;
+    border-color: #b8b8b8;
 }
 
-div#news_section div.owl-item a.btn-tweet::hover {
+div#news_section div.owl-item a.btn-tweet:hover {
     color: #ffffff;
+    background-color: #b8b8b8;
+    border-color: #b8b8b8;
+}
+
+div#news_section div.unit-body p.subtitle {
+    font-style: italic;
+    text-align: left;
+    color: #bdbdbd;
+    padding: 0px;
+    margin: 0px;
+    font-size: 1em;
+    line-height: 1.2em;
+}
+
+div#news_section div.quote-body p.text {
+    font-size: 1.1em;
+    text-align: center;
 }
 
 div#news_section div.owl-item hr.linea {
