--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -16,19 +16,21 @@
                     <p>Cargando...</p>
                 </center>
             </div>
-            <div id="news_section" data-loop="false" data-margin="15" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-theme owl-loaded" style="display:none;">
+            <div id="news_section" data-loop="false" data-margin="10" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light" >
 
                 <div class="owl-item">
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_0" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_0" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_0" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_0" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_0" class="subtitle"></p>
+                                <p id="date_0" class="subtitle"></p>
+                                <a id="id_0" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -42,13 +44,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_1" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_1" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_1" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_1" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_1" class="subtitle"></p>
+                                <p id="date_1" class="subtitle"></p>
+                                <a id="id_1" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -62,13 +66,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_2" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_2" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_2" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_2" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_2" class="subtitle"></p>
+                                <p id="date_2" class="subtitle"></p>
+                                <a id="id_2" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -82,13 +88,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_3" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_3" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_3" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_3" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_3" class="subtitle"></p>
+                                <p id="date_3" class="subtitle"></p>
+                                <a id="id_3" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -102,13 +110,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_4" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_4" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_4" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_4" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_4" class="subtitle"></p>
+                                <p id="date_4" class="subtitle"></p>
+                                <a id="id_4" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -122,13 +132,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_5" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_5" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_5" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_5" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_5" class="subtitle"></p>
+                                <p id="date_5" class="subtitle"></p>
+                                <a id="id_5" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -142,13 +154,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_6" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_6" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_6" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_6" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_6" class="subtitle"></p>
+                                <p id="date_6" class="subtitle"></p>
+                                <a id="id_6" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -162,13 +176,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_7" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_7" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_7" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_7" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_7" class="subtitle"></p>
+                                <p id="date_7" class="subtitle"></p>
+                                <a id="id_7" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -182,13 +198,15 @@
                     <div class="item-tweet">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
                             <div class="unit-left unit-item-narrow">
-                                <img id="img_8" width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                <img id="img_8" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
                             </div>
                             <div class="unit-body unit-item-wide">
                                 <h5 class="quote-author text-capitalize text-bold text-left">
                                     <cite id="name_8" class="text-normal"></cite>
                                 </h5>
-                                <p id="date_8" class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                <p id="username_8" class="subtitle"></p>
+                                <p id="date_8" class="subtitle"></p>
+                                <a id="id_8" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
                             </div>
                         </div>
                         <hr class="linea">
@@ -220,17 +238,16 @@
             contentType: 'application/json',
             dataType: 'json',
             success: function(response, request) {
-                var indice = 0;
+                var indice = 0
                 for(var tweet in response) {
-                    if(indice == 8)
-                        break;
                     var tmpDate = new Date(response[tweet].created_at);
-                    console.log(tmpDate.getDate()+"/"+(tmpDate.getMonth()+1)+"/"+tmpDate.getFullYear());
                     $('#img_'+indice).attr("src", response[tweet].user_image);
-                    $('#name_'+indice).html(response[tweet].user_screen_name);
+                    $('#name_'+indice).html(response[tweet].user_name);
+                    $('#username_'+indice).html("@"+response[tweet].user_screen_name);
                     $('#date_'+indice).html(tmpDate.getDate()+"/"+(tmpDate.getMonth()+1)+"/"+tmpDate.getFullYear());
+                    $('#id_'+indice).attr("href", "https://twitter.com/statuses/"+response[tweet].tweet_id);
                     $('#msg_'+indice).html(response[tweet].full_text);
-                    indice = indice+1;
+                    indice += 1;
                 }
             }
         });
