se llama a twitter_timeline

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -234,7 +234,7 @@
         //LLamada ajax
         $.ajax({
             type: 'GET',
-            url: '/carrera/timeline/',
+            url: '/carrera/twitter_timeline/',
             contentType: 'application/json',
             dataType: 'json',
             success: function(response, request) {
