--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -168,18 +168,18 @@ div.loading {
     width: 100%;
 }
 
-div#news_section div.owl-item{
+div#twitter_section div.owl-item{
     height: 250px;
     overflow: auto;
     background-color: #F1F3F9;
 }
 
-div#news_section div.item-tweet {
+div#twitter_section div.item-tweet {
     padding: 5px;
     position: relative;
 }
 
-div#news_section div.owl-item a.btn-tweet {
+div#twitter_section div.owl-item a.btn-tweet {
     color: #ffffff;
     margin-top: 5px;
     font-size: 0.6em;
@@ -191,13 +191,13 @@ div#news_section div.owl-item a.btn-tweet {
     border-color: #b8b8b8;
 }
 
-div#news_section div.owl-item a.btn-tweet:hover {
+div#twitter_section div.owl-item a.btn-tweet:hover {
     color: #ffffff;
     background-color: #b8b8b8;
     border-color: #b8b8b8;
 }
 
-div#news_section div.unit-body p.subtitle {
+div#twitter_section div.unit-body p.subtitle {
     font-style: italic;
     text-align: left;
     color: #bdbdbd;
@@ -207,12 +207,12 @@ div#news_section div.unit-body p.subtitle {
     line-height: 1.2em;
 }
 
-div#news_section div.quote-body p.text {
+div#twitter_section div.quote-body p.text {
     font-size: 1.1em;
     text-align: center;
 }
 
-div#news_section div.owl-item hr.linea {
+div#twitter_section div.owl-item hr.linea {
     padding:0;
     margin: 5px 0 5px 0;
     border:1px solid #b7b7b72b;
