se crea dinamicamente el carrusel de twitter

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -16,206 +16,7 @@
                     <p>Cargando...</p>
                 </center>
             </div>
-            <div id="twitter_section" data-loop="false" data-margin="10" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light" >
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_0" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_0" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_0" class="subtitle"></p>
-                                <p id="date_0" class="subtitle"></p>
-                                <a id="id_0" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_0" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_1" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_1" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_1" class="subtitle"></p>
-                                <p id="date_1" class="subtitle"></p>
-                                <a id="id_1" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_1" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_2" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_2" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_2" class="subtitle"></p>
-                                <p id="date_2" class="subtitle"></p>
-                                <a id="id_2" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_2" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_3" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_3" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_3" class="subtitle"></p>
-                                <p id="date_3" class="subtitle"></p>
-                                <a id="id_3" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_3" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_4" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_4" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_4" class="subtitle"></p>
-                                <p id="date_4" class="subtitle"></p>
-                                <a id="id_4" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_4" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_5" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_5" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_5" class="subtitle"></p>
-                                <p id="date_5" class="subtitle"></p>
-                                <a id="id_5" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_5" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_6" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_6" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_6" class="subtitle"></p>
-                                <p id="date_6" class="subtitle"></p>
-                                <a id="id_6" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_6" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_7" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_7" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_7" class="subtitle"></p>
-                                <p id="date_7" class="subtitle"></p>
-                                <a id="id_7" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_7" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-
-                <div class="owl-item">
-                    <div class="item-tweet">
-                        <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
-                            <div class="unit-left unit-item-narrow">
-                                <img id="img_8" width="50" height="50" src="#" alt="" class="img-circle quote-img" />
-                            </div>
-                            <div class="unit-body unit-item-wide">
-                                <h5 class="quote-author text-capitalize text-bold text-left">
-                                    <cite id="name_8" class="text-normal"></cite>
-                                </h5>
-                                <p id="username_8" class="subtitle"></p>
-                                <p id="date_8" class="subtitle"></p>
-                                <a id="id_8" href="#" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>
-                            </div>
-                        </div>
-                        <hr class="linea">
-                        <div class="quote-body">
-                            <p id="msg_8" class="h4 text-gray-dark text"></p>             
-                        </div>
-                    </div>
-                </div>
-  
+            <div id="twitter_section" data-loop="false" data-margin="10" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light" style="display:none;">
             </div>
         </div>
 
@@ -227,29 +28,13 @@
                 </center>
             </div>
             <div id="instagram_section" data-loop="false" data-margin="15" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="4" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-theme owl-loaded" style="display:none;">
-  
             </div>
         </div>
     </div>
 </section>
-<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-        //Evento cuando carga ajax
-        $(document).ajaxStart(function() {
-            $('#loading_section_twitter').show(); 
-            $('#twitter_section').hide();
-            $('#loading_section_instagram').show(); 
-            $('#instagram_section').hide(); 
-        })
-        .ajaxStop(function() {
-            $('#loading_section_twitter').hide(); 
-            $('#twitter_section').show(); 
-            $('#loading_section_instagram').hide(); 
-            $('#instagram_section').show();
-            $("#twitter_section").data('owlCarousel').onResize();
-            $("#instagram_section").data('owlCarousel').onResize();
-        });
         //LLamada ajax twitter
         $.ajax({
             type: 'GET',
@@ -257,17 +42,42 @@
             contentType: 'application/json',
             dataType: 'json',
             success: function(response, request) {
-                var indice = 0
-                for(var tweet in response) {
-                    var tmpDate = new Date(response[tweet].created_at);
-                    $('#img_'+indice).attr("src", response[tweet].user_image);
-                    $('#name_'+indice).html(response[tweet].user_name);
-                    $('#username_'+indice).html("@"+response[tweet].user_screen_name);
-                    $('#date_'+indice).html(tmpDate.getDate()+"/"+(tmpDate.getMonth()+1)+"/"+tmpDate.getFullYear());
-                    $('#id_'+indice).attr("href", "https://twitter.com/statuses/"+response[tweet].tweet_id);
-                    $('#msg_'+indice).html(response[tweet].full_text);
-                    indice += 1;
-                }
+                var monthNames = ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"];
+                $.each(response, function(i, tweet) {
+                    var d = new Date(tweet.user_created_at);
+                    var item = '<div class="owl-item">'+
+                        '<div class="item-tweet">'+
+                            '<div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">'+
+                                '<div class="unit-left unit-item-narrow">'+
+                                    '<img width="50" height="50" src="'+tweet.user_image+'" alt="" class="img-circle quote-img" />'+
+                                '</div>'+
+                                '<div class="unit-body unit-item-wide">'+
+                                    '<h5 class="quote-author text-capitalize text-bold text-left">'+
+                                        '<cite class="text-normal">'+tweet.user_name+'</cite>'+
+                                    '</h5>'+
+                                    '<p class="subtitle">@'+tweet.user_screen_name+'</p>'+
+                                    '<p class="subtitle">'+d.getDay()+' '+monthNames[d.getMonth()]+' '+d.getFullYear()+'</p>'+
+                                    '<a href="https://twitter.com/statuses/'+tweet.tweet_id+'" class="btn btn-xs btn-java btn-tweet" target="_blank">MAS</a>'+
+                                '</div>'+
+                            '</div>'+
+                            '<hr class="linea">'+
+                            '<div class="quote-body">'+
+                                '<p class="h4 text-gray-dark text">'+tweet.full_text+'</p>'+             
+                            '</div>'+
+                        '</div>'+
+                    '</div>';
+                    $('#twitter_section').trigger('add.owl.carousel', [$(item)])
+                });
+                $('#twitter_section').trigger('refresh.owl.carousel');
+            },
+            beforeSend: function() {
+                $('#loading_section_twitter').show(); 
+                $('#twitter_section').hide();
+            },
+            complete: function() { 
+                $('#loading_section_twitter').hide(); 
+                $('#twitter_section').show();
+                $("#twitter_section").data('owlCarousel').onResize();
             }
         });
         //LLamada ajax instagram
@@ -281,6 +91,15 @@
                     $('#instagram_section').trigger('add.owl.carousel', [$('<img id="img_instagram_'+i+'" src="'+instagram.image+'" alt="" class="quote-img"  />')])
                 });
                 $('#instagram_section').trigger('refresh.owl.carousel');
+            },
+            beforeSend: function() {
+                $('#loading_section_instagram').show(); 
+                $('#instagram_section').hide(); 
+            },
+            complete: function() { 
+                $('#loading_section_instagram').hide(); 
+                $('#instagram_section').show();
+                $("#instagram_section").data('owlCarousel').onResize();
             }
         });        
     });
